fix: do not allow app to overflow

--- a/gaming-livestream/src/styles/_general.scss
+++ b/gaming-livestream/src/styles/_general.scss
@@ -3,8 +3,9 @@
 }
 
 html {
+  overflow: hidden;
   scroll-behavior: smooth;
-  font-family: Helvetica Neue, sans-serif;;
+  font-family: Helvetica Neue, sans-serif;
 }
 
 body {
